--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-            <h1>Aqui vamos a hacer un blogspot</h1>
-            <p>Y este es el parragrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el titulo interesante del post</h1>
+                <p>Aca es donde damos inicio al post con el tema interesante de las ramas</p>
+            </div>
+        </div>
     </body>
 </html>>
