--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,9 @@
     <body>
         <div id="container">
             <div id="post">
+                <div id="cabecera">
+                    Cabecera
+                </div>
                 <h1>Este es el titulo interesante del post</h1>
                 <p>Aca es donde damos inicio al post con el tema interesante de las ramas</p>
             </div>
