--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El titulo del post sera cambiado/title>
+        <title>El titulo del post sera cambiado</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
